infrastructure/base/traefik/oauth2-proxy-errors.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-errors
  namespace: traefik
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      namespace: oauth2-proxy
      port: 80
    query: "/oauth2/start?rd={url}"
    statusRewrites:
      "401": 302
